--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ lib-cov
 *.out
 *.pid
 *.gz
-.DS_Store
-/node_modules/
 
 pids
 logs
@@ -15,3 +13,9 @@ results
 
 npm-debug.log
 node_modules
+
+.DS_Store
+/node_modules/
+/bower_components/
+/dest/
+/build/
